# winter-getting-started

./: .gitignore  Dockerfile  Procfile  README.md  conftest.py  deployment.yaml  pyproject.toml  wsgi.py
.github/workflows/: gke.yml  test.yml
simple_api/: __init__.py  api.py  openapi.py  settings.py  swagger_ui.py  urls.py  wsgi.py
simple_api/api/: api.py
simple_api/tests/: test_api.py
src/: test_api.py
