[tool.poetry]
name = "winter_example_1"
version = "1.0"
description = ""
authors = ["Alexander Egorov <mofr@zond.org>"]

[tool.poetry.dependencies]
python = "^3.8"
winter = "^10.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
