[tool.poetry]
name = "winter_getting_started"
version = "1.0"
description = ""
authors = ["Alexander Egorov <mofr@zond.org>"]

[tool.poetry.dependencies]
python = "^3.8 || ^3.9 || ^3.10"
winter = "10.0.1"
gunicorn = "^20.1.0"
pytest = "^7.1.2"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
